<?xml version="1.0"?>
<package>
    <name>golf_new_control</name>
    <version>0.0.0</version>
    <description>The golf-car new control package</description>
    <maintainer email="lty2226262@gmail.com">joey</maintainer>
    <license>BSD</license>
    <author >lty2226262</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf_conversions</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>ramlab_msgs</build_depend>

    <run_depend>rosbag</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>tf_conversions</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>ramlab_msgs</run_depend>

    <export>
        <nodelet plugin="${prefix}/joy_parser.xml"/>
        <nodelet plugin="${prefix}/cmd_vel_mux.xml"/>
        <nodelet plugin="${prefix}/can_parser.xml"/>
        <nodelet plugin="${prefix}/golf_can_parser.xml"/>
    </export>
</package>
